Initial pass on MessageBox rendered with React Infinite and js line wrapping, fix line wrapping bug, disable browser line wrapping

--- a/client/src/style.css
+++ b/client/src/style.css
@@ -207,19 +207,24 @@ p {
 	top: 50px;
 	bottom: 50px;
 	right: 200px;
-	padding: 15px;
-	overflow: auto;
+	/*padding: 15px;*/
 	z-index: 1;
 }
 
+.messagebox > div {
+	padding: 10px 15px;
+	overflow: auto !important;
+}
+
 .message {
-	margin-bottom: 5px;
+	white-space: nowrap;
+	/*margin-bottom: 5px;
 	padding-left: 55px;
-	text-indent: -55px;
+	text-indent: -55px;*/
 }
 
 .message span {
-	margin-right: 15px;
+	/*margin-right: 15px;*/
 }
 
 .message-info {
